<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/activityLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingLeft="16dp"
        android:paddingRight="16dp"
        android:orientation="vertical" >
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="20dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/alarm_text"
                android:textSize="17sp"
                android:textStyle="bold"/>
            <ToggleButton
                android:id="@+id/alarmToggle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:layout_alignParentRight="true"/>


        </RelativeLayout>
        <CheckBox
            android:id="@+id/chkMAE"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/chk_mae" />
        <CheckBox
            android:id="@+id/chkVAMF"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/chk_vamf" />
        <View
            android:layout_width="fill_parent"
            android:layout_height="1dp"
            android:layout_marginTop="5dp"
            android:background="#b7b2b2"/>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <TextView
                android:id="@+id/emailText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="14dp"
                android:hint="@string/email_text"
                android:textSize="17sp" />
            <Button
                android:id="@+id/emailToggle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:hint="@string/email_btn"
                android:layout_alignParentRight="true"/>
        </RelativeLayout>
        <View
            android:layout_width="fill_parent"
            android:layout_height="1dp"
            android:layout_marginTop="5dp"
            android:background="#b7b2b2"/>

        <TextView
            android:id="@+id/syncOutputText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="14dp"
            android:hint="@string/sync_text"
            android:textStyle="italic"
            android:textSize="15sp"/>

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp">

            <LinearLayout
                android:id="@+id/alertsView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical" >
            </LinearLayout>

        </ScrollView>
    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="10dp">

        <Button
            android:id="@+id/forceSyncButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:hint="@string/sync_btn"
            android:layout_alignParentRight="true"/>
        <Button
            android:id="@+id/clearButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:background="#a88484"
            android:hint="@string/clear_btn"
            android:layout_alignParentRight="true"/>
    </LinearLayout>


</RelativeLayout>